@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Extract 'remove_depletion' function from potion. Give access to plugins to it,
+add to Python wrappers.
+Nicolas Weeger 2010-02-28
+
 Use ARCH_DEPLETION instead of hardcoding the value.
 Nicolas Weeger 2010-02-28
 
